<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Book Store</string>
    <string name="menu_option">Menu</string>
    <string name="menu_action1">Home</string>
    <string name="menu_action2">Authors</string>
    <string name="menu_action3">Books</string>
    <string name="title_activity_books">Books</string>
    <string name="title_activity_authors">Authors</string>
    <string name="title_activity_add_relation">Add Relation</string>
    <string name="title_activity_add_author">Manage Author</string>
    <string name="title_activity_add_book">Manage Book</string>

    <string name="add_new">Add New</string>
    <string name="list_info">Tap a record to edit it!</string>

    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="assign">Assign Book to Author</string>

    <string name="title">*Title</string>
    <string name="description">Description</string>
    <string name="name">*Name</string>
    <string name="surname">*Surname</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>

</resources>
